--- a/Fed1StudioProject/index.html
+++ b/Fed1StudioProject/index.html
@@ -2,9 +2,29 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Blockchain Education Academy</title>
+    <meta name="description" content="A tool to help individuals understand blockchain technology" />
+    <meta name="keywords" content="education, blockchain, Web3, crypto, knowledge" />
+    <meta name="author" content="Connor McDonald" />
 </head>
 <body>
+    <header>
+        <h1>Blockchain Education Academy</h1>
+        <p>Building Web3 knowledge block-by-block.</p>
+    </header>
+    <main>
+        <section>
+            <h2>Introduction</h2>
+            <article>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur purus ut faucibus pulvinar elementum integer enim. Enim nec dui nunc mattis enim ut tellus elementum. Aliquet porttitor lacus luctus accumsan tortor. In mollis nunc sed id semper risus in. Eu volutpat odio facilisis mauris. Lorem sed risus ultricies tristique nulla aliquet enim tortor. Velit sed ullamcorper morbi tincidunt. Laoreet id donec ultrices tincidunt arcu non. Amet massa vitae tortor condimentum lacinia quis vel eros donec. Ultrices eros in cursus turpis massa tincidunt. Adipiscing vitae proin sagittis nisl rhoncus mattis. Diam quam nulla porttitor massa id neque.
+                </p>
+                <p>
+                    Sapien faucibus et molestie ac feugiat sed lectus vestibulum. Ultrices mi tempus imperdiet nulla malesuada. Est ante in nibh mauris cursus mattis molestie. Nulla posuere sollicitudin aliquam ultrices sagittis orci a scelerisque. Sollicitudin nibh sit amet commodo nulla facilisi nullam vehicula ipsum. Pellentesque pulvinar pellentesque habitant morbi tristique. Justo nec ultrices dui sapien eget mi proin sed libero. Id velit ut tortor pretium viverra suspendisse. Est ullamcorper eget nulla facilisi. Phasellus faucibus scelerisque eleifend donec. Donec ac odio tempor orci. Egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Amet commodo nulla facilisi nullam vehicula ipsum a. Lorem mollis aliquam ut porttitor leo.
+                </p>
 
+            </article>
+        </section>
+    </main>
 </body>
 </html>
